<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimaryDark"
android:gravity="bottom"
android:orientation="vertical"
android:weightSum="10"
app:umanoPanelHeight="60dp"
app:umanoShadowHeight="20dp"
tools:context="org.lukasowy.fitnesscalculators.MetabolicActivity">

<RelativeLayout
    android:id="@+id/allScreenBMR"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/dots3"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/inputHeight"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/radioBtnMale"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_toStartOf="@+id/radioBtnFemale"
            android:buttonTint="@color/colorWhite"
            android:text="Male"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="259dp"
            tools:layout_editor_absoluteY="88dp" />

        <RadioButton
            android:id="@+id/radioBtnFemale"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/inputWeight"
            android:layout_below="@+id/radioGroup"
            android:layout_marginStart="5dp"
            android:layout_weight="0.42"
            android:buttonTint="@color/colorWhite"
            android:text="Female"
            android:textColor="@android:color/white"
            android:textColorLink="@color/colorWhite"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="88dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/inputHeight"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/inputWeight"
        android:layout_below="@+id/radioGroup"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorLink="@color/colorWhite" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCalculate"
        android:layout_below="@+id/inputHeight"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:shadowColor="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorLink="@color/colorWhite" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputAge"
        android:layout_alignBottom="@+id/inputAge"
        android:layout_alignStart="@+id/textView7"
        android:text="Age:"
        android:textColor="@android:color/white"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/inputAge"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/inputWeight"
        android:layout_below="@+id/inputWeight"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorLink="@color/colorWhite" />

    <Button
        android:id="@+id/btnCalculate"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_below="@+id/inputAge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="@drawable/button_corners"
        android:elevation="4dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="Result" />

    <TextView
        android:id="@+id/titleViewBMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="BMR"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputHeight"
        android:layout_alignBottom="@+id/inputHeight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:text="Height:"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputWeight"
        android:layout_alignBottom="@+id/inputWeight"
        android:layout_alignStart="@+id/textView6"
        android:text="Weight:"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inputHeight"
        android:layout_alignBottom="@+id/inputHeight"
        android:layout_toEndOf="@+id/btnCalculate"
        android:text="cm"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignTop="@+id/inputWeight"
        android:text="@string/kg"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_alignStart="@+id/textView6"
        android:text="@string/sex"
        android:textColor="@android:color/white"
        android:textSize="24sp" />


</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/slidingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/what_is_bmr"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:text="@string/longTextMetabolic"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
